--- a/index.html
+++ b/index.html
@@ -1,37 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<body>
-    <h1>Sumar cuatro números</h1>
-    <p>Por favor, introduce cuatro números:</p>
-    <input id="num1" type="number" autofocus><br>
-    <input id="num2" type="number"><br>
-    <input id="num3" type="number"><br>
-    <input id="num4" type="number">
-
-    <button type="button" onclick="myFunction()">Sumar</button>
-    <p id="sumando"></p>
-    <script>
-        function myFunction() {
-            let x, y, a, b, suma, text, total;
-            x = document.getElementById("num1").value;
-            y = document.getElementById("num2").value;
-            a = document.getElementById("num3").value;
-            b = document.getElementById("num4").value;
-
-            // if (isNaN(x) || isNaN(y) || isNaN(a) || isNaN(b)) {
-            //     text = "Es necesarios introducir dos números válidos";
-            // } else {
-            //si no ponemos parseFloat concatenaría x con y  
-            suma = parseInt((parseFloat(x) * parseFloat(y) + parseFloat(a) * parseFloat(b)) / (parseFloat(y) + parseFloat(b)));
-            text = suma;
-
-            //814 CRT and 277 calls
-            //814*277+700*25/
-            // }
-            document.getElementById("sumando").textContent = text;
-        }
-    </script>
-</body>
-
-</html>
+<!-- www.youtube.com/CodeExplained -->
